# nao_human_interaction

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: dependencies.cmake
cmake_example/: CMakeLists.txt  README.md  main.cpp
cmake_example/src/: action.cpp  action.hpp  buffer.hpp  common.cpp  common.hpp  configuration.hpp  detect_faces.cpp  detect_faces.hpp  event.cpp  event.hpp  event_timer.cpp  event_timer.hpp  face_detection.cpp  face_detection.hpp  game.cpp  game.hpp  includes.ihh  move_head.cpp  move_head.hpp  nao_broker.cpp  nao_broker.hpp  nao_talk.cpp  nao_talk.hpp  nao_walk.cpp  nao_walk.hpp  optimized_image.cpp  optimized_image.hpp  state.cpp  state.hpp  state_factory.hpp
qibuild_example/: CMakeLists.txt  main.cpp  optimizedimage.cpp  optimizedimage.hpp  qiproject.xml
qibuild_example/.qi/: path.conf
src/: action.cpp  action.hpp  common.cpp  common.hpp  configuration.cpp  configuration.hpp  detect_faces.cpp  detect_faces.hpp  event.hpp  event_timer.cpp  event_timer.hpp  game.cpp  game.hpp  move_head.cpp  move_head.hpp  nao_walk.cpp  nao_walk.hpp  state.cpp  state_factory.hpp  timer.hpp
